--- a/css/contact-page/style-contact-page.css
+++ b/css/contact-page/style-contact-page.css
@@ -73,6 +73,7 @@ hr{
 	width:290px;
 	background-color: #2b2b2b;
 	border-radius: 5px;
+	border: 0.1em solid #2b2b2b;
 }
 
 .field-cont div{
@@ -111,10 +112,15 @@ hr{
 .request-button{
 	display: block;
 	margin:30px auto;
+	-webkit-appearance: none; -moz-appearance: none; appearance: none;
 	
 }
 
 #map img{
 	width:100%;
 	height:80%;
+}
+
+.wrong{
+  border: 0.1em solid red;
 }
